Whitespace fixes

--- a/client/stylesheets/main.less
+++ b/client/stylesheets/main.less
@@ -70,12 +70,15 @@ html, body {
       }
       @media (min-width: @screen-sm-min) and (max-width: @screen-md-max) {
         width: 80%;
+        padding: 32px 24px;
       }
       @media (max-width: @screen-sm-max) {
         text-align: center;
+        padding: 48px 24px;
       }
       @media (min-width: @screen-lg-min) {
         width: 50%;
+        padding: 48px 24px;
       }
 
       .ic_seeraccept {
@@ -262,6 +265,8 @@ html, body {
     @media (min-width: 0px) and (max-width: @screen-md-max){
       padding-top: 16px;
     }
+
+    margin-bottom: 1.5em;
   }
 }
 
